force-app/main/default/objects/Custom_Configuration_Change__c/Custom_Configuration_Change__c.object-meta.xml
<CustomObject>
    <description>This object holds the configuration settings records</description>
    <label>Custom Configuration Change</label>
    <nameField>
        <displayFormat>CCC - {00000}</displayFormat>
        <label>Custom Configuration Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Configuration Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>