force-app/main/default/objects/Custom_Configuration_Change__c/fields/Config_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Config_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables or disables the respective config on the basis of the record type name</description>
    <label>Config Disabled</label>
    <type>Checkbox</type>
</CustomField>