force-app/main/default/objects/Custom_Configuration_Change__c/fields/Config_For__c.field-meta.xml
<CustomField>
    <fullName>Config_For__c</fullName>
    <label>Config For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ML Sync</fullName>
            </value>
            <value>
                <fullName>CX Sync</fullName>
            </value>
            <value>
                <fullName>CX &amp; ML Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>