force-app/main/default/objects/Custom_Configuration_Change__c/fields/Config_Type__c.field-meta.xml
<CustomField>
    <fullName>Config_Type__c</fullName>
    <label>Config Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Biweekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Snooze</fullName>
            </value>
            <value>
                <fullName>Snooze with a Date picker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>