force-app/main/default/objects/Custom_Configuration_Change__c/fields/Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Run__c</fullName>
    <label>Last Run</label>
    <type>Date</type>
</CustomField>