force-app/main/default/objects/Custom_Configuration_Change__c/fields/Next_Run__c.field-meta.xml
<CustomField>
    <fullName>Next_Run__c</fullName>
    <label>Next Run</label>
    <type>Date</type>
</CustomField>