force-app/main/default/objects/Custom_Configuration_Change__c/recordTypes/RP_Frequency_Config.recordType-meta.xml
<RecordType>
    <fullName>RP_Frequency_Config</fullName>
    <active>true</active>
    <label>RP Frequency Config</label>
</RecordType>